examples/type_system/failing/11_return_type_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E1004: Runtime return type mismatch
// `greet` declares -> String but returns an Int

fn greet(name: String) -> None {
    //42
    print("hello")
}

greet("world")
